# Agent

./: .gitignore  DOKUMENTASI_RRM.md  FRACTAL_ARCHITECTURE.md  README.md  TRANCRIPT_FEMTO_PRECISION.md  all_harvested_arc_seeds.json  combined.md  engine.ts  fix_allocation.py  fix_compile_branching.py  fix_composer.py  fix_cow_mcts.py  fix_crop_test.py  fix_crop_test2.py  fix_engine_soa.py  fix_engine_soa2.py  fix_engine_soa3.py  fix_h_planner.py  fix_hierarchical.py  fix_phantom.py  fix_replay.py  fix_replay2.py  fix_replay3.py  fix_rrm_agent.py  fix_rrm_agent10.py  fix_rrm_agent11.py  fix_rrm_agent12.py  fix_rrm_agent13.py  fix_rrm_agent14.py  fix_rrm_agent2.py  fix_rrm_agent3.py  fix_rrm_agent4.py  fix_rrm_agent5.py  fix_rrm_agent6.py  fix_rrm_agent7.py  fix_rrm_agent8.py  fix_rrm_agent9.py  fix_rrm_agent_ceo.py  fix_rrm_agent_ceo2.py  fix_rrm_agent_composer.py  (+79 more)
rrm_rust/: .gitignore  AGENTS.md  ARSITEKTUR_RRM.md  ARSITEKTUR_RRM_LENGKAP.md  BUKU_HITAM_RRM_RUST.md  Cargo.toml  debug_end.txt  fix_final_end.sh  fix_final_render.sh  fix_micro.sh  fix_micro2.sh  fix_micro_compile.sh  fix_micro_compile2.sh  micro_test.txt  micro_test2.txt  micro_test3.txt  micro_test4.txt  micro_test5.txt  micro_test6.txt  micro_test7.txt  micro_test8.txt  output_ceo.txt  output_crop.txt  output_final.txt  output_latest.txt  soul_log.md  test_nano.sh  test_pico.sh
rrm_rust/.cargo/: config.toml
rrm_rust/Experiment_A/: soul_log.md
rrm_rust/Experiment_B/: soul_log.md
rrm_rust/main/: soul_log.md
rrm_rust/src/: lib.rs  main.rs  quantum_topology.rs
rrm_rust/tests/: distill_tensor.rs  (+2 more)
(+182 files in other folders)
