[package]
name = "rrm_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "2.3.0"
futures-lite = "2.6.1"
ndarray = "0.17.2"
pollster = "0.4.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
